# sdf_contact_estimation

./: README.md  sdf_contact_estimation_https.rosinstall
sdf_contact_estimation/: CMakeLists.txt  package.xml
sdf_contact_estimation/benchmark/: pose_estimation_benchmark.cpp
sdf_contact_estimation/benchmark/launch/: benchmark_contact_information_asterix.launch  benchmark_contact_information_onix.launch  benchmark_pose_estimation_asterix.launch  benchmark_pose_estimation_onix.launch
sdf_contact_estimation/config/: asterix_shape_config.yaml  onix_shape_config.yaml  optimization.yaml  sdf_config.yaml  support_polygon_asterix.yaml  support_polygon_onix.yaml  support_polygon_telemax.yaml  telemax_2f_shape_config.yaml  telemax_shape_config.yaml  tracker_shape_config.yaml
sdf_contact_estimation/include/sdf_contact_estimation/: sdf_contact_estimation.h  test_scenarios.h  visualisation.h
sdf_contact_estimation/include/sdf_contact_estimation/optimization/: falling_pose_optimizer.h  pose_optimizer.h  rotation_pose_optimizer.h
sdf_contact_estimation/include/sdf_contact_estimation/robot_model/: shape_collision_types.h  shape_model.h
sdf_contact_estimation/include/sdf_contact_estimation/robot_model/basic_shapes/: cylinder_shape.h  rectangle_shape.h  shape_base.h
sdf_contact_estimation/include/sdf_contact_estimation/sdf/: interpolated_voxblox_esdf.h  interpolated_voxblox_tsdf.h  sdf_model.h
sdf_contact_estimation/include/sdf_contact_estimation/util/: timing.h  utils.h
sdf_contact_estimation/launch/: contact_estimation_asterix.launch  contact_estimation_onix.launch  contact_estimation_telemax.launch  publish_ground_plane.launch  rviz.launch
sdf_contact_estimation/rviz/: contact_estimation.rviz
sdf_contact_estimation/src/: ground_plane_publisher_node.cpp  sdf_contact_estimation.cpp  sdf_contact_estimation_node.cpp  sdf_model.cpp  test_scenarios.cpp  visualisation.cpp
sdf_contact_estimation/src/optimization/: falling_pose_optimizer.cpp  pose_optimizer.cpp  rotation_pose_optimizer.cpp
sdf_contact_estimation/src/robot_model/: shape_collision_types.cpp  shape_model.cpp
sdf_contact_estimation/src/robot_model/basic_shapes/: shape_base.cpp
sdf_contact_estimation/src/util/: utils.cpp
sdf_contact_estimation_demo/: CMakeLists.txt  package.xml
sdf_contact_estimation_demo/config/: optimization.yaml  sdf_config.yaml
sdf_contact_estimation_demo/launch/: demo.launch  rviz.launch  xacrodisplay_tracked_robot.launch
sdf_contact_estimation_demo/rviz/: demo.rviz  xacrodisplay.rviz
sdf_contact_estimation_demo/urdf/: tracked_robot.urdf.xacro  ugv_base.urdf.xacro  ugv_flipper.urdf.xacro  ugv_main_track.urdf.xacro
